# cmflairs

./: .dev.vars.example  .gitignore  Cargo.toml  README.md  setup.bash  wrangler.toml
cm_macro/: Cargo.toml
cm_macro/src/: lib.rs
cm_pages/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js
cm_pages/src/routes/: +layout.svelte  +layout.ts  +page.svelte  ChampBadge.svelte  Header.svelte  locale.ts
cm_worker/: Cargo.toml  build.rs
cm_worker/src/: auth.rs  base36.rs  db.rs  error.rs  ignore_keys.rs  init.rs  lib.rs  local_future.rs  reddit.rs  util.rs  webjob.rs  with.rs
migrations/: 0001_create.sql  0001_create_users_table.sql  0002_crate_summoner_table.sql  0002_create_summoner_table.sql
src/: db.rs  lib.rs  util.rs  webjob.rs
