[package]
name = "cmflairs"
version = "0.1.0"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.21"
riven = { version = "2.34.0-beta.0", default-features = false, features = [
    "rustls-tls",
] }
wasm-bindgen = "0.2" # Cloudflare `worker` pins a specific version.
web-sys = "0.3"
worker = "0.0.18"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
