[package]
name = "cm_worker"
version = "0.0.0"
authors = ["Mingwei Samuel <mingwei.samuel@gmail.com>"]
edition = "2021"

[lib]
# Include "rlib" so rust-analyzer will actually show diagnostics.
crate-type = ["rlib", "cdylib"]

[features]

[dependencies]
base64 = "0.13.1"
futures = "0.3.30"
getrandom = { version = "0.2", features = ["js"] }
hmac = "0.12.1"
itertools = "0.12.1"
jwt = "0.16.0"
log = "0.4.21"
riven = { version = "2.46.0", default-features = false, features = [
    "rustls-tls",
] }
secrecy = "0.8.0"
serde = "1.0.200"
serde_json = "1.0.116"
serde_with = { version = "3.8.1", features = ["json"] }
sha2 = "0.10.8"
url = "2.5.0"
wasm-bindgen = "0.2" # Cloudflare `worker` pins a specific version.
web-sys = "0.3.69"
web-time = "1.1.0"
worker = { version = "0.2.0", features = ["d1", "queue"] }
